--- a/css/style.scss
+++ b/css/style.scss
@@ -2,13 +2,21 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Inter";
+  font-family: "Inter",sans-serif;
 }
-
+h3 {
+  margin: 0 !important;
+}
 body {
   background-color: black;
 }
-
+h2 {
+  margin-bottom: 0 !important;
+}
+p {
+  padding: 0 !important;
+  margin: 0 !important;
+}
 li {
   list-style: none;
 }
@@ -20,17 +28,115 @@ ul {
   margin: 0 !important;
 }
 
+.contact {
+  background-color: #2a323a;
+  padding: 142px 0;
+  .container {
+    .contact_wrapper {
+      max-width: 960px;
+      margin: 0 auto;
+
+      form {
+        .left_inputs {
+          input {
+            width: 300px;
+            height: 57px;
+            padding-left: 36px;
+            border-radius: 0;
+          }
+          .input-1 {
+            margin-bottom: 48px;
+          }
+          ::placeholder {
+            color: #000;
+            font-size: 18.793px;
+            font-style: normal;
+            font-weight: 200;
+            line-height: normal;
+          }
+        }
+        .textarea {
+          textarea {
+            height: 208px;
+            border-radius: 0;
+          }
+          ::placeholder {
+            color: #ccc;
+            font-size: 18.793px;
+            font-weight: 400;
+          }
+        }
+        .form_btn {
+          button {
+            background-color: #ec1a13;
+            width: 262px;
+            height: 56px;
+            color: white;
+            border: none;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 768px) {
+  .contact {
+    .container {
+      .contact_wrapper {
+        form {
+          .left_inputs {
+            input {
+              width: 100%;
+              height: 57px;
+              padding-left: 36px;
+              border-radius: 0;
+            }
+            .input-1 {
+              margin-bottom: 15px;
+            }
+            ::placeholder {
+              color: #000;
+              font-size: 18.793px;
+              font-style: normal;
+              font-weight: 200;
+              line-height: normal;
+            }
+          }
+
+          .textarea {
+            textarea {
+              height: 208px;
+              border-radius: 0;
+            }
+            ::placeholder {
+              color: #ccc;
+              font-size: 18.793px;
+              font-weight: 400;
+            }
+          }
+          .form_btn {
+            button {
+              background-color: #ec1a13;
+              width: 150px;
+              height: 50px;
+              color: white;
+              border: none;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 .colletions {
   background-color: #384248;
   padding: 119px 0;
   .container {
     .colletions_title {
-      color: #FFF;
-      font-family: Habibi, sans-serif;
+      color: #fff;
+      font-family: "Inter";
       font-size: 36px;
-      font-style: normal;
       font-weight: 400;
-      line-height: normal;
       padding-bottom: 62px;
     }
 
@@ -47,7 +153,7 @@ ul {
 
         h4 {
           margin-top: 31px;
-          color: #FFF;
+          color: #fff;
           text-align: center;
           font-family: Inter;
           font-size: 18px;
@@ -59,230 +165,132 @@ ul {
     }
   }
 }
-
-.drop_down {
-  height: 375px;
-  width: 100%;
-  background-color: #354249;
-  border-bottom: 1px solid #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  .dropdown_control {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    .for_text {
-      width: 85%;
-      height: 100%;
-    }
-    h1 {
-      color: #fff;
-      font-size: 36px;
-      font-style: normal;
-      font-weight: 400;
-      width: 96%;
-      margin: 0 auto !important;
-      margin: 25px 0 !important;
-    }
-    .dropdown_item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-wrap: wrap;
-      height: 100%;
-      .drop_button_one {
-        width: 187px;
-        padding: 16.624px 21.684px;
-        flex-direction: column;
-        justify-content: center;
-        gap: 7.228px;
-        flex-shrink: 0;
-        background: #fff;
-        border: none;
-        border-left: 1px solid rgba(0, 0, 0, 0.513);
-        margin: 5px 0;
-      }
-      .drop_select {
-        width: 187.929px;
-        padding: 16.624px 21.684px;
-        flex-direction: column;
-        justify-content: center;
-        gap: 7.228px;
-        flex-shrink: 0;
-        color: #fff;
-        border: none;
-        border-left: 1px solid rgba(0, 0, 0, 0.513);
-        background: #ff0000;
-        margin: 5px 0;
-      }
-      .drop_button {
-        width: 187.929px;
-        padding: 16.624px 21.684px;
-        flex-direction: column;
-        justify-content: center;
-        gap: 7.228px;
-        flex-shrink: 0;
-        color: #fff;
-        color: black;
-        font-weight: 200;
-        border: none;
-        background-color: #fff;
-        border-left: 1px solid rgba(0, 0, 0, 0.513);
-        margin: 5px 0;
-      }
-    }
-  }
-
-  @media (max-width: 660px) {
-    .for_text h1 {
-      font-size: 26px;
-      text-align: center;
-    }
+@media (max-width: 992px) {
+  .colletions_title {
+    text-align: center;
   }
 }
-@media (max-width: 660px) {
-  .drop_down {
-    height: 450px;
+@media (max-width: 768px) {
+  .colletions {
+    padding: 70px 0;
+  }
+}
+@media (max-width: 576px) {
+  .colletions {
+    .container {
+      .colletions_title {
+        font-size: 28px !important;
+      }
+    }
   }
 }
 
 // location
-
-.location_bc{
-  height: 90vh;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #354249;
-
-  .location_wrapper{
-      height: 100%;
-      width: 90%;
-      border: 1px solid red;
-      display: flex;
-      align-items: center;
-      
-
-
-      .img_line{
-          display: flex;
-          align-items: center;
-          justify-content: center;
+.contact {
+  background-color: #2a323a;
+  padding: 142px 0;
+  .container {
+    .contact_wrapper {
+      .contact_title {
+        text-align: center;
+        color: white;
       }
-      .img_line img{
-          width: 595.59px;
-          height:100%;  
-          border-radius: 14.456px;
-          background: url(<path-to-image>), 
-          lightgray 50% / cover no-repeat;
-          
+    }
+  }
+}
+.location {
+  background: #384248;
+  padding: 150px 0;
+  color: white;
+  .container {
+    .location_wrapper {
+      .location_text {
+        h3 {
+          color: #fff;
+          font-size: 36px;
+          font-weight: 400;
+        }
+        p {
+          color: #fff;
+          font-size: 19px;
+          font-weight: 400;
+        }
+        .social_links {
+          h6 {
+            color: #fff;
+            font-size: 20px;
+            font-weight: 400;
+          }
+        }
       }
-      .text_line{
-
-          height: 350px;
-          width: 50%;
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          margin: 0 auto;
-          flex-wrap: nowrap;
-
-          h5{
-              color: #FFF;
-              font-family: Inter;
-              font-size: 28px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: normal;
-              margin: 0;
-              margin-bottom: 18px;
-          }
-          p{
-              color: #FFF;
-              font-family: Inter;
-              font-size: 18px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: normal;
-          }
-          .links_pg a{
-              color: #FFF;
-              font-family: Inter;
-              font-size: 18px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: normal;
-          }
-      }
-      @media  (max-width:560px) {
-          
-          .text_line{
-              width: 100%;
-              text-align: center;
-          }
-      } 
-      .img_line{
-          height: 100%;
+      .location_map {
+        iframe {
           width: 100%;
-          margin: 0 auto;
-          display: flex;
-          justify-content: center;
+          border-radius: 14px;
+        }
       }
-      .img_line img{
-          width: 500.59px;
-          height: 350.444px;
-          margin: 0 auto;
-      }
-      @media  (max-width:1160px) {
-          
-          .img_line{
-              margin-top: 20px;
-          }
-      } 
-      @media  (max-width:605px) {
-          
-          .img_line img{
-              width: 400.59px;
-              height: 250.444px;
-          }
-      }
-      @media  (max-width:605px) {
-          
-          .img_line img{
-              width: 300.59px;
-              height: 150.444px;
-          }
-      }  
-      
-  }
-  @media  (max-width:1160px) {
-      .location_wrapper{
-         display: block !important;
-      }
-  }
-  
-
-}  
-@media  (max-width:1160px) {
-  .location_bc{
-      height: 100%;
-      border: 1px solid red
-  }
-  .img_line{
-      margin-top: 35px;
+    }
   }
 }
-
-h2 {
-  margin-bottom: 0 !important;
+@media (max-width: 992px) {
+  .location {
+    padding: 100px 0;
+    .container {
+      .location_wrapper {
+        .location_text {
+          h3 {
+            color: #fff;
+            font-size: 36px;
+            font-weight: 400;
+          }
+          p {
+            color: #fff;
+            font-size: 19px;
+            font-weight: 400;
+          }
+          .social {
+            padding-top: 50px !important;
+          }
+          .social_links {
+            h6 {
+              color: #fff;
+              font-size: 20px;
+              font-weight: 400;
+            }
+          }
+        }
+        .location_map {
+          margin-top: 20px;
+          iframe {
+            width: 100%;
+            border-radius: 14px;
+          }
+        }
+      }
+    }
+  }
 }
-p {
-  padding: 0 !important;
-  margin: 0 !important;
+@media (max-width: 768px) {
+  .location {
+    .container {
+      .location_wrapper {
+        .location_text {
+          h3 {
+            font-size: 25px;
+          }
+          p {
+            color: #fff;
+            font-size: 15px;
+          }
+          .social_links {
+            h6 {
+              font-size: 17px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
 @import "./parts/header";
 @import "./parts/home";
