--- a/css/parts/_filter.scss
+++ b/css/parts/_filter.scss
@@ -3,12 +3,136 @@
   padding: 116px 0;
   .container {
     .filter_wrapper {
+      max-width: 1200px;
+      margin: 0 auto;
       .filter_title {
         color: #fff;
         font-family: "Inter";
         font-size: 36px;
         font-weight: 400;
+        margin-bottom: 48px;
+        margin-left: 88px;
+      }
+      .filter_wrap_in {
+        .col-11 {
+          border-right: 1px solid rgba(0, 0, 0, 0.3);
+          padding-left: 0;
+          padding-right: 0;
+        }
+        .col-11:nth-child(5) {
+          border-right: 0px solid rgba(0, 0, 0, 0.3);
+          padding-left: 0;
+          padding-right: 0;
+        }
+        ::placeholder {
+          color: #000;
+        }
       }
     }
   }
+}
+@media (max-width: 992px) {
+  .filter_title {
+    margin-left: 45px !important;
+  }
+}
+@media (max-width: 576px) {
+  .filter_title {
+    margin-left: 0px !important;
+    font-size: 28px !important;
+  }
+}
+/* Style for the custom select container */
+.custom-select {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: inline-block;
+}
+
+/* Style for the visible part of the select */
+.select-box {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 16px 20px;
+  width: 100%;
+  height: 100%;
+  font-weight: 600;
+  font-size: 15px;
+  white-space: nowrap;
+}
+.select-box-kuziv {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 16px 20px;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  font-weight: 600;
+  font-size: 15px;
+  white-space: nowrap;
+}
+
+/* Style for the dropdown arrow */
+.select-arrow {
+  margin-left: 10px;
+}
+
+/* Style for the dropdown list */
+.select-options {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-top: none;
+  border-radius: 0 0 5px 5px;
+  background-color: #fff;
+  z-index: 1;
+  display: none;
+}
+
+/* Style for individual options in the dropdown list */
+.select-option {
+  padding: 10px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 600;
+  font-size: 15px;
+  white-space: nowrap;
+}
+
+/* Hover effect for options */
+.select-option:hover {
+  background-color: #f0f0f0;
+}
+
+.filter_input {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  padding: 16px 20px;
+  color: #000;
+  text-align: center;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.filter_btn {
+  width: 100%;
+  height: 100%;
+  outline: none;
+  border: none;
+  padding: 16px 20px;
+  background-color: #ed1a13;
+  color: #fff;
+  font-size: 17.35px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
